--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.Rproj.user
 # History files
 .Rhistory
 .Rapp.history
@@ -37,8 +38,8 @@ vignettes/*.pdf
 /data/
 /project_date/
 /database/
-/database/.db
-database/
+/database/*.db
+database/*~
 
 # Temporary files created by R markdown
 *.utf8.md
